--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -271,7 +271,7 @@ ul
 #contacts-frame
   position: relative
   min-height: 520px
-  white-space: no-wrap
+  white-space: nowrap
   overflow-y: auto
   overflow-x: hidden
   border-top: 1px solid #eee
@@ -296,7 +296,7 @@ ul
   min-height: 16px
   cursor: default
   padding: 6px 37px
-  white-space: no-wrap
+  white-space: nowrap
   overflow: hidden
   border: 1px solid transparent
   border-left: none
@@ -353,7 +353,7 @@ img.c-icon:hover
 #contact-details
   display: inline-block
   position: fixed
-  width: 400px
+  width: 100%
   top: 40px
   left: 0
   // color: #aaa
@@ -368,11 +368,9 @@ img.c-icon:hover
   position: relative
   display: block
   padding: 8px
-  margin: 2px
-  height: 53px
-  width: 82%
+  margin: 8px
   border: 1px solid #eee
-  font-size: $fontSize * 0.5
+  font-size: $fontSize * 0.75
   font-family: monospace
   @include smooth
 
@@ -402,14 +400,11 @@ img.c-icon:hover
   position: relative
   display: block
   padding: 8px
-  margin: 2px
-  height: 53px
+  margin: 16px
   width: 82%
   border: 1px solid #eee
-  font-size: $fontSize * 0.5
   font-family: monospace
   @include smooth
-
 .network-details:hover
   border-color: #ddd
   top: -2px
