improve button margins

--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -394,6 +394,7 @@ img.c-icon:hover
 
 .instance-actions .btn
   padding: 8px 16px
+  margin-top: 16px
   font-size: $fontSize * 1.2
   text-shadow: 0 2px #888
   border-radius: 8px
