--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -414,6 +414,7 @@ img.c-icon:hover {
 
 .instance-actions .btn {
   padding: 8px 16px;
+  margin-top: 16px;
   font-size: 19.2px;
   text-shadow: 0 2px #888888;
   border-radius: 8px; }
