--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -47,11 +47,12 @@ ul
   background-color: #bbb
 
 .btn
-  border: 1px solid #aaa
+  border: 1px solid #ccc
   color: #333
   background: #fff
   border-radius: 2px
   cursor: pointer
+  @include smooth
 .btn:hover, .btn:focus
   border-color: #999
   box-shadow: 0 1px 3px #aaa
