--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -360,7 +360,7 @@ img.contact-image {
 
 .c-icons {
   position: absolute;
-  right: 4px;
+  right: 12px;
   color: #222222;
   font-size: 12.8px;
   font-weight: 900; }
@@ -374,6 +374,20 @@ img.contact-image {
 
 .c-icon:hover {
   color: #888888; }
+
+.c-notification {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: #880000;
+  color: white;
+  font-size: 9.6px;
+  font-weight: 900;
+  width: 12px;
+  height: 12px;
+  line-height: 14px;
+  text-align: center;
+  opacity: 0.7; }
 
 img.c-icon {
   vertical-align: middle;
