--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -343,16 +343,30 @@ img.contact-image
 
 .c-icons
   position: absolute
-  right: 4px
+  right: 12px
   color: #222
   font-size: $fontSize * 0.8
   font-weight: 900
-
 .c-icon
   padding: 1px
   @include smooth
 .c-icon:hover
   color: #888
+
+// Red ! shows up on the corner of contacts who have had a change.
+.c-notification
+  position: absolute
+  right: 0
+  bottom: 0
+  background-color: #800
+  color: #fff
+  font-size: $fontSize * 0.6
+  font-weight: 900
+  width: 12px
+  height: 12px
+  line-height: 14px
+  text-align: center
+  opacity: 0.7
 
 img.c-icon
   vertical-align: middle
