make filter toggling work, add icons

--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -243,35 +243,64 @@ ul {
   outline: none; }
 
 #filters {
-  position: relative;
+  z-index: 20;
   display: block;
   width: 100%;
   background-color: #fafafa;
+  height: 30px;
   text-align: center;
   overflow: hidden;
-  z-index: 20;
-  padding: 2px;
+  padding: 0;
   box-shadow: 0 1px 2px #aaaaaa; }
 
 .filter {
   margin: 0;
-  padding: 2px 16px;
+  padding: 0;
   border: none;
-  background-color: #fafafa;
-  color: #999999;
+  height: 24px;
+  width: 30px;
+  line-height: 0;
+  background: transparent no-repeat center;
+  background-size: contain !important;
+  font-size: 24px;
+  font-weight: 900;
+  color: #222222;
+  opacity: 0.4;
   -webkit-transition: all 0.23s !important;
   -moz-transition: all 0.23s !important;
   -o-transition: all 0.23s !important;
   transition: all 0.23s !important; }
 
-.filter:hover {
-  background-color: #fbfbfb;
-  box-shadow: 0 0 2px #aaaaaa inset; }
-
 .filter:active, .filter:focus {
   outline: none;
-  box-shadow: 0 0 3px #888888 inset;
-  color: #666666; }
+  opacity: 0.3; }
+
+.filter:hover {
+  cursor: pointer;
+  opacity: 0.2; }
+
+.filter.on {
+  opacity: 1; }
+
+.filter.on:active, .filter.on:focus {
+  outline: none;
+  opacity: 0.95; }
+
+.filter.on:hover {
+  cursor: pointer;
+  opacity: 0.75; }
+
+#my-access {
+  background-image: url("../icons/arrow-up.png"); }
+
+#friends-access {
+  background-image: url("../icons/arrow-down.png"); }
+
+#uproxy-filter {
+  background-image: url("../icons/uproxy-19.png"); }
+
+#online-filter {
+  background-image: url("../icons/online.png"); }
 
 #roster {
   position: absolute;
