--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -234,32 +234,57 @@ ul
   outline: none
 
 #filters
-  position: relative
+  z-index: 20
   display: block
   width: 100%
   background-color: #fafafa
+  height: 30px
   text-align: center
   overflow: hidden
-  z-index: 20
-  padding: 2px
+  padding: 0
   box-shadow: 0 1px 2px #aaa
 
 .filter
   margin: 0
-  padding: 2px 16px
+  padding: 0
   border: none
-  background-color: #fafafa
-  color: #999
+  height: 24px
+  width: 30px
+  line-height: 0
+  background: transparent no-repeat center
+  background-size: contain !important
+  font-size: $fontSize * 1.5
+  font-weight: 900
+  color: #222
+  opacity: 0.4
   @include smooth
-
-.filter:hover
-  background-color: #fbfbfb
-  box-shadow: 0 0 2px #aaa inset
-
 .filter:active, .filter:focus
   outline: none
-  box-shadow: 0 0 3px #888 inset
-  color: #666
+  opacity: 0.3
+.filter:hover
+  cursor: pointer
+  opacity: 0.2
+
+.filter.on
+  opacity: 1.0
+.filter.on:active, .filter.on:focus
+  outline: none
+  opacity: 0.95
+.filter.on:hover
+  cursor: pointer
+  opacity: 0.75
+
+#my-access
+  background-image: url('../icons/arrow-up.png')
+
+#friends-access
+  background-image: url('../icons/arrow-down.png')
+
+#uproxy-filter
+  background-image: url('../icons/uproxy-19.png')
+
+#online-filter
+  background-image: url('../icons/online.png')
 
 // --------------------------- Roster & Contacts -------------------------------
 #roster
