--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -77,6 +77,7 @@ ul
   cursor: pointer
 
 #header
+  height: 64px
 
 .title
   padding: 0 8px
@@ -236,7 +237,7 @@ ul
 #search-btn
   position: absolute
   z-index: 40
-  right: 0
+  right: 4px
   top: 0
   width: 26px
   height: 30px
@@ -285,7 +286,7 @@ ul
   opacity: 1.0
 .filter.on:active, .filter.on:focus
   outline: none
-  opacity: 0.95
+  opacity: 0.8
 .filter.on:hover
   cursor: pointer
   opacity: 0.75
@@ -304,8 +305,6 @@ ul
 
 // --------------------------- Roster & Contacts -------------------------------
 #roster
-  position: absolute
-  top: 60px
   width: 100%
   @include smooth
 
