--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -398,6 +398,9 @@ ul {
   box-shadow: 0 2px 6px 1px #dddddd;
   outline: none; }
 
+.contacts li.offline {
+  color: #888888; }
+
 img.contact-image {
   position: absolute;
   left: 1px;
