--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -371,6 +371,8 @@ ul
   // pointer-events: none
   // height: 0px
   // padding: 0
+.contacts li.offline
+  color: #888
 
 img.contact-image
   position: absolute
