--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -470,7 +470,7 @@ img.c-icon:hover
 .instance-actions .btn
   padding: 8px 16px
   margin-top: 16px
-  text-shadow: 0 2px #888
+  text-shadow: 0 1px 1px #888
   border-radius: 3px
 
 .client-details
